# interacting-with-llm-vlm

./: .env  .env.example  pyproject.toml
dependencies/: intime_common_packages-0.4.13-py3-none-any.whl
llm-api/: .env  README.md  SWAGGER_GUIDE.md  main.py
llm-api/dependencies/: ai_shared-1.0.1-py3-none-any.whl
llm-api/src/api/: middleware.py  router.py  startup_sequence.py
llm-api/src/api/dependencies/: auth.py
llm-api/src/api/routes/: model_inference_endpoints.py
llm-api/src/config/: settings.py
llm-api/src/models/: llm_settings.py
llm-api/src/services/: image_model.py  text_model.py
llm-api/tests/: test_endpoints.py
src/api/routes/: health.py  model_inference_endpoints.py
src/config/: __init__.py
src/helper/: loggers.py
src/services/: image_model.py
